Overflow fix

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,8 @@
+html {
+    max-width: 100vw;
+    max-height: 100vh;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
